# CenterPoint

./: .gitignore  CMakeLists.txt  dockerfile
include/trt10_common/: safeCommon.h
result/: seq_0_frame_100.bin.txt  seq_0_frame_101.bin.txt
src/: centerpoint.cpp  preprocess.cu
